--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.26",
     "tailwindcss": "^3.3.3"
   }
